--- a/views/materias.html
+++ b/views/materias.html
@@ -163,7 +163,37 @@
 
 
 <!--mat-->
-<div class="infoMat" value="mental">mental</div>
+<div class="infoMat" value="mental">
+
+    
+<p>Es la herramienta que ejerce la norma de llevar a cabo la acción, del mismo modo que la mente ordena el caminar o realizar cualquier otra acción cotidiana. Saber manipular la mente pensante, y comprender los entresijos de la mente dormida, son áreas que explora dicho ámbito.</p>
+ 
+<p>La mayoría de las personas no exploran el alcance que puede tener esta rama, tratando la mente como algo subconsciente que actúa por cuenta propia, pero puede llegar a otorgar grandes ventajas al mago que lo use, siempre que lo use del modo correcto. </p>
+
+<p>Dentro de lo que corresponde a la mente pensante intervienen los siguientes ámbitos:</p>
+
+<ul>
+<li><b>Legeremancia</b>: También denominado Intrusismo o comunmente "Leer la mente", aunque en realidad vaya más allá que eso. Trata básicamente de expandir la mente, como se haría para aprender a utilizar un brazo, o una pierna, sólo que al no ser tangible, no es tan sencillo su aprendizaje, y menos todavía acceder a la de otros. La legeremancia o intrusión no sólo comprende a la invasión mental para leer los pensamientos ajenos, puede llegar a ser tan peligrosa, dependiendo del nivel de exploración que el atacante haya alcanzado, de poder hacer que la víctima vea o sienta por cada uno de sus cinco sentidos, lo que el atacante desee que sienta (creación de ilusiones), o algo tal peligroso como manipular las acciones mientras mantiene a la víctima en un estado de trance. Pueden suprimir recuerdos, alterarlos, o dejarlos en un estado vegetativo.</li>
+<li><b>Oclumancia</b>: También denominado barreras o protección. Cuando asaltas una mente, ésto te deja expuesto, podría decirse que es la contraparte de la misma. Si la persona que asaltas no tiene ningún conocimiento de mentalismo, no hay problema alguno, sin embargo, en el caso contrario, si no dispones de barreras, sería como exponerse gratuítamente. Este ámbito tiene dos vertientes que pueden utlizarse simultaneamente;</li>
+<ul>
+<li>Barreras físicas: Son las barreras creadas por la propia mecánica mental. Distraer al invasor, anular accesos a la misma con ausencia de información, son ejemplos de la misma.</li>
+<li>Barreras mágicas: Es la que se aplica mediante sellos o hechizos. Son como candados mentales, que pueden romperse si se encuentra la combinación concreta o la llave, que normalmente suele ser un recuerdo núcleo.</li>
+<ul>
+</ul>
+
+<p>
+La parte más importante de la mente, la que evita que un atacante pueda dejar a alguien en un estado vejetativo con facilidad normalmente tiene una protección nativa compuesta por "El pico", donde se ven sus recuerdos más preciados y "El valle", donde la mayoría de los recuerdos negativos se reprimen, conocer ambos escenarios da control total y absoluto sobre la persona, como si se supiera el nombre oculto de la persona. Es la frontera a la mente dormida, y más allá de ello, se debe tratar con extrema cautela, pues dar un paso en falso explorando la mente dormida, incluso para el propietario de la misma, puede llevarlo por el camino de la locura.
+</p>
+
+<p>
+Para explicar la mente dormida, detengámonos en una antítesis filosófica. Algunos dicen que la mente es como una tabla rasa, vacía, que va escribiéndose a medida que experimentamos. Es decir, que todos los conocimientos y habilidades de cada uno son exclusivamente fruto del aprendizaje. Por otro lado, están los que dicen que la mente nace con ciertos conocimientos innatos, que la mente va recordando a medida que crece o deduce.</p>
+
+<p>Esto se aplica al mentalismo de la siguiente manera: La mente pensante es la <i>Tabula Rasa</i> descrita en el empirismo, mientras que la mente dormida es una mente que conoce de forma innata conceptos universales descritos en el racionalismo. Sólo que va algo más allá. La mente dormida es omnisciente, lo conoce absolutamente todo en el universo. Maneja conocimientos que la mente pensante es incapaz de procesar, y por ello es que, si la mente pensante llegara a entrar en comunión completa con la mente dormida, el sujeto acabaría en el delirio de manera irreparable.</p>
+
+
+
+
+</div>
 
 
 <!--mat-->
