--- a/views/materias.html
+++ b/views/materias.html
@@ -165,7 +165,7 @@
 <!--mat-->
 <div class="infoMat" value="mental">
 
-    
+<div class="t2">Mentalismo</div>
 <p>Es la herramienta que ejerce la norma de llevar a cabo la acción, del mismo modo que la mente ordena el caminar o realizar cualquier otra acción cotidiana. Saber manipular la mente pensante, y comprender los entresijos de la mente dormida, son áreas que explora dicho ámbito.</p>
  
 <p>La mayoría de las personas no exploran el alcance que puede tener esta rama, tratando la mente como algo subconsciente que actúa por cuenta propia, pero puede llegar a otorgar grandes ventajas al mago que lo use, siempre que lo use del modo correcto. </p>
