--- a/views/materias.html
+++ b/views/materias.html
@@ -176,9 +176,9 @@
 <li><b>Legeremancia</b>: También denominado Intrusismo o comunmente "Leer la mente", aunque en realidad vaya más allá que eso. Trata básicamente de expandir la mente, como se haría para aprender a utilizar un brazo, o una pierna, sólo que al no ser tangible, no es tan sencillo su aprendizaje, y menos todavía acceder a la de otros. La legeremancia o intrusión no sólo comprende a la invasión mental para leer los pensamientos ajenos, puede llegar a ser tan peligrosa, dependiendo del nivel de exploración que el atacante haya alcanzado, de poder hacer que la víctima vea o sienta por cada uno de sus cinco sentidos, lo que el atacante desee que sienta (creación de ilusiones), o algo tal peligroso como manipular las acciones mientras mantiene a la víctima en un estado de trance. Pueden suprimir recuerdos, alterarlos, o dejarlos en un estado vegetativo.</li>
 <li><b>Oclumancia</b>: También denominado barreras o protección. Cuando asaltas una mente, ésto te deja expuesto, podría decirse que es la contraparte de la misma. Si la persona que asaltas no tiene ningún conocimiento de mentalismo, no hay problema alguno, sin embargo, en el caso contrario, si no dispones de barreras, sería como exponerse gratuítamente. Este ámbito tiene dos vertientes que pueden utlizarse simultaneamente;</li>
 <ul>
-<li>Barreras físicas: Son las barreras creadas por la propia mecánica mental. Distraer al invasor, anular accesos a la misma con ausencia de información, son ejemplos de la misma.</li>
-<li>Barreras mágicas: Es la que se aplica mediante sellos o hechizos. Son como candados mentales, que pueden romperse si se encuentra la combinación concreta o la llave, que normalmente suele ser un recuerdo núcleo.</li>
-<ul>
+<li><b>Barreras físicas</b>: Son las barreras creadas por la propia mecánica mental. Distraer al invasor, anular accesos a la misma con ausencia de información, son ejemplos de la misma.</li>
+<li><b>Barreras mágicas</b>: Es la que se aplica mediante sellos o hechizos. Son como candados mentales, que pueden romperse si se encuentra la combinación concreta o la llave, que normalmente suele ser un recuerdo núcleo.</li>
+</ul>
 </ul>
 
 <p>
