--- a/views/materias.html
+++ b/views/materias.html
@@ -185,7 +185,7 @@
 </ul>
 
 <p>
-La parte más importante de la mente, la que evita que un atacante pueda dejar a alguien en un estado vejetativo con facilidad normalmente tiene una protección nativa compuesta por "El pico", donde se ven sus recuerdos más preciados y "El valle", donde la mayoría de los recuerdos negativos se reprimen, conocer ambos escenarios da control total y absoluto sobre la persona, como si se supiera el nombre oculto de la persona. Es la frontera a la mente dormida, y más allá de ello, se debe tratar con extrema cautela, pues dar un paso en falso explorando la mente dormida, incluso para el propietario de la misma, puede llevarlo por el camino de la locura.
+La parte más importante de la mente, la que evita que un atacante pueda dejar a alguien en un estado vejetativo con facilidad normalmente tiene una protección nativa compuesta por <i>"El pico"</i>, donde se ven sus recuerdos más preciados y <i>"El valle"</i>, donde la mayoría de los recuerdos negativos se reprimen, conocer ambos escenarios da control total y absoluto sobre la persona, como si se supiera el nombre oculto de la persona. Es la frontera a la mente dormida, y más allá de ello, se debe tratar con extrema cautela, pues dar un paso en falso explorando la mente dormida, incluso para el propietario de la misma, puede llevarlo por el camino de la locura.
 </p>
 
 <p>
