--- a/views/materias.html
+++ b/views/materias.html
@@ -126,7 +126,7 @@
         <li><b>Defensa</b>: Define la supervivencia ante encuentros evitando sufrir grandes efectos negativos o ser víctima de daños irreparables. Casos en los que haya que aprender a lidiar, por ejemplo contra entidades que consumen el maná.</li>
         <li><b>Expulsión o Supresión</b>: Lograr que el adversario no pueda moverse o se mantenga debilitado. Dependiendo del caso, mediante la restricción mágica o fisica.</li>
         <li><b>Liberación</b>: Corresponde a las habilidades que tratan de calmar a los a entidades agitadas, cercanas a acabar en el sendero oscuro y puedan traspasar la brecha. </li>
-        <li><b>Sellado</b>: Engloba las tecnicas centradas en encerrar entidades malignas, o aquellas llegadas a límites incapaces de ser calmadas, en contenedores, normalmente con la ayuda de las runas. Tales contenedores pueden variar desde objetos hasta seres vivos como personas. Pues hay entidades tan fuertes que un simple objeto no podría retenerlos, y hay veces que se sellan en recien nacidos.</li>
+        <li><b>Sellado</b>: Engloba las tecnicas centradas en encerrar entidades malignas, o aquellas llegadas a límites incapaces de ser calmadas, en contenedores, normalmente con la ayuda de las runas. Tales contenedores pueden variar desde objetos hasta seres vivos como personas. Pues hay entidades tan fuertes que un simple objeto no podría retenerlos.</li>
         </ul>
         
         <p>Sólo los exorcistas más experimentados son capaces de detectar el engaño de las entidades maligas en cuestión de segundos y sólo ellos saben realizar a la perfección un sellado. Es por ello, que a los iniciados se les enseña una alternativa que ellos denominan como <i>Erradicar</i>.</p>
