--- a/views/userlist.html
+++ b/views/userlist.html
@@ -10,7 +10,7 @@
                         <th>Cuenta</th>
                         <th>FC</th>
                         <th>Rango</th>
-                        <th>Clan</th>
+                        <th>Vínculo</th>
                         <th>Activ.</th>
                     </tr>
                 </thead>
