--- a/views/index.html
+++ b/views/index.html
@@ -23,9 +23,18 @@
     <br><br><b>— El sutil.</b> Verde como la paz y la armonía de la naturaleza. Se dedica a cuidar de los incomprendidos, silenciosos pero inspiradores. Entusiastas, creativos, a veces optimistas y altruistas, pero sobre todo aquellos marcados por su idealismo.
     <br><br><b>— El observador.</b> Su azul celeste pasa disimulado durante el día, pero durante la noche brilla casi tanto como una estrella. Cuida de aquellos enfocados en lo que es práctico, a los organizados, custodios y protectores, entregados por el ajeno.
     <br>
-    <center><a href="/map"><div class="button">Ir al mapa</div></a></center><br>
-    <center><a href="/guides"><div class="button">Guías</div></a></center><br>
-    <center><a href="/dormitorios"><div class="button">Dormitorios</div></a></center><br>
+
+    <center>
+        <div style="display: flex; flex-wrap: wrap;">
+            <a href="/map"><div class="button">Ir al mapa</div></a>
+            <a href="/guides"><div class="button">Guías</div></a>
+            <a href="/dormitorios"><div class="button">Dormitorios</div></a>
+            <a href="/materias"><div class="button">Materias</div></a>
+        </div>
+
+    </center>
+    
+
 </p>
 
 
