--- a/views/index.html
+++ b/views/index.html
@@ -27,9 +27,10 @@
     <center>
         <div style="display: flex; flex-wrap: wrap;">
             <a href="/map"><div class="button">Ir al mapa</div></a>
-            <a href="/guides"><div class="button">Guías</div></a>
-            <a href="/dormitorios"><div class="button">Dormitorios</div></a>
-            <a href="/materias"><div class="button">Materias</div></a>
+            <a style="width: 60%" href="/dormitorios"><div class="button">Dormitorios</div></a>
+            <a style="width: 40%" href="/guides"><div class="button">Guías</div></a>
+            <a style="width: 40%" href="/materias"><div class="button">Materias</div></a>
+            <a style="width: 60%" href="/ficha"><div class="button">Hacer la ficha</div></a>
         </div>
 
     </center>
@@ -39,7 +40,11 @@
 
 
     
-   
+<style>
+    .button {
+        width: 100%;
+    }
+</style>
    
 
 <%- include(`./partials/bot-part.html`) %>
