--- a/views/materias.html
+++ b/views/materias.html
@@ -1,5 +1,5 @@
 <%- include(`./partials/top-part.html`) %>
-<h1>Comprendiendo mejor las materias</h1>
+<h1>Materias al detalle</h1>
 <p>Entendemos que una definición tan simple en sola una única frase para cada materia (Como se definen en el mapa) puede llegar a quedarse corto, sobre todo con materias complejas de comprender como lo son el Simpatismo o la Nominación. Así, a simple vista no queda muy claro cuales son las limitaciones y alcances de cada una, lo que abarcan y cómo funcionan realmente. Cómo están conectadas las distintas materias y por qué hay que escoger entre simpatismo y hechicería y no se pueden cursar las dos en la academia de Narysium.</p>
 <p>Primero que nada, veamos qué materias están más conectadas que otras, ya sea porque comparten la definción de algunos conceptos o ámbitos entre sí.</p>
 
@@ -14,7 +14,6 @@
     background: #040506;
     letter-spacing: 2px;
     box-shadow: 0px 0px 0px;
-    width: 33.33333333333333%;
     text-align: center;
     font-weight: 300;
     font-family: monospace;
@@ -29,18 +28,18 @@
 </style>
 
 <div class="selectorMat">
-    <div class="buttonMat" id="simp" style="background-color: #77b1b2">Simpatismo</div>
-    <div class="buttonMat" id="hech" style="background-color:#b68dc8">Hechicería</div>
-    <div class="buttonMat" id="runol" style="background-color: #b1a77a">Runología</div>
-    <div class="buttonMat" id="artif" style="background-color: #616584">Artificería</div>
-    <div class="buttonMat" id="alqui" style="background-color: #4ca58d">Alquimia</div>
-    <div class="buttonMat" id="cmagic" style="background-color: #e28195">C. Mágicas</div>
-    <div class="buttonMat" id="herbol" style="background-color: #73c261">Herbología</div>
-    <div class="buttonMat" id="exorc" style="background-color: #715694">Exorcismo</div>
-    <div class="buttonMat" id="histor" style="background-color: #8da3c8">Historia</div>
-    <div class="buttonMat" id="maref" style="background-color: #846161">Maref</div>
-    <div class="buttonMat" id="mental" style="background-color: #9cab70">Mentalismo</div>
-    <div class="buttonMat" id="nomin" style="background-color: #c77844">Nominación</div>
+    <div class="buttonMat" id="simp" style="background-color: #77b1b2; width: 33.33%">Simpatismo</div>
+    <div class="buttonMat" id="hech" style="background-color:#b68dc8; width: 33.33%">Hechicería</div>
+    <div class="buttonMat" id="runol" style="background-color: #b1a77a; width: 33.33%">Runología</div>
+    <div class="buttonMat" id="artif" style="background-color: #616584; width: 33.33%">Artificería</div>
+    <div class="buttonMat" id="alqui" style="background-color: #4ca58d; width: 23.33%">Alquimia</div>
+    <div class="buttonMat" id="cmagic" style="background-color: #e28195; width: 43.33%">C. Mágicas</div>
+    <div class="buttonMat" id="herbol" style="background-color: #73c261; width: 33.33%">Herbología</div>
+    <div class="buttonMat" id="exorc" style="background-color: #715694; width: 33.33%">Exorcismo</div>
+    <div class="buttonMat" id="histor" style="background-color: #8da3c8; width: 33.33%">Historia</div>
+    <div class="buttonMat" id="maref" style="background-color: #846161; width: 33.33%">Maref</div>
+    <div class="buttonMat" id="mental" style="background-color: #9cab70; width: 33.33%">Mentalismo</div>
+    <div class="buttonMat" id="nomin" style="background-color: #c77844; width: 33.33%">Nominación</div>
 </div>
 
 <div class="infoMatBegin">
