--- a/views/index.html
+++ b/views/index.html
@@ -26,7 +26,7 @@
 
     <center>
         <div style="display: flex; flex-wrap: wrap;">
-            <a href="/map"><div class="button">Ir al mapa</div></a>
+            <a style="width: 34%" href="/map"><div class="button">Ir al mapa</div></a>
             <a style="width: 65%" href="/dormitorios"><div class="button">Dormitorios</div></a>
             <a style="width: 45%" href="/guides"><div class="button">Guías</div></a>
             <a style="width: 54%" href="/materias"><div class="button">Materias</div></a>
