--- a/views/dormitorios.html
+++ b/views/dormitorios.html
@@ -2,7 +2,7 @@
 <h1>Dormitorios</h1>
 <div class="t2">Dormitorio cutre</div>
 <center><img class="dormitorios" src="/assets/dormitorios/cutre.png"></center>
-<p>Los dormitorios más humildes de la academia. Tiene el mínimo de las cosas para que una habitación sea una habitación, pero eso no quiere decir que cumpla con lo acogedor. Son los únicos dormitorios cuyos duendes no pasan a a limpiar gradualmente y son aquellas asignadas a los estudiantes sin clan conocidos como ignotos.</p>
+<p>Los dormitorios más humildes de la academia. Tiene el mínimo de las cosas para que una habitación sea una habitación, pero eso no quiere decir que cumpla con lo acogedor. Son los únicos dormitorios cuyos duendes no pasan a a limpiar gradualmente y son aquellas asignadas a los estudiantes que con ausencias notorias en las clases.</p>
 <div class="t2">Dormitorio sencillo</div>
 <center><img class="dormitorios" src="/assets/dormitorios/sencillo.png"></center>
 <p>Los dormitorios comunes, algo más acogedores que los anteriores disponen de calefacción con un sistema de ventilación diseñado por artfcería barato, pues a veces se avería, pero de resto es como cualquier habitación que un estudiante de residenci podría tener. Todos los clanes disfrutan de habitaciones sencillas.</p>
