--- a/views/ficha.html
+++ b/views/ficha.html
@@ -1,7 +1,7 @@
 <%- include(`./partials/top-part.html`) %>
 <h1>Creando al personaje</h1>
 <div class="t2">Cupos</div>
-Para tener una variedad dentro del fake controlamos que si existen muchos integrantes de un arqutipo no se abuse de este, por ello abrimos o cerramos rangos y clanes dependiendo de como esté el censo del mismo. Siempre decimos que queremos dar libertad, por ello seremos menos exigentes con el tema de los clanes, pero si que iremos cambiando más a menudo el tema de los rangos.
+Para tener una variedad dentro del fake controlamos si existen muchos integrantes de un arqutipo, para que no se abuse de este, por ello abrimos o cerramos los rangos dependiendo de cómo esté el censo del mismo. Siempre decimos que queremos dar libertad, por ello seremos menos exigentes con el tema de los clanes, ade,ás de que usamos un quinto grupo para los nuevos integrantes para poder tenerlos equilibrados, pero lo que sí iremos cambiando más a menudo será el tema de los rangos.
 <br><br>
 <center><a href="https://docs.google.com/document/d/1RysqIqJYUT2qoFJD90A-DSgoXLhAwEYn1SvlXrFVXaQ/edit?usp=sharing"><div class="button">Cupos</div></a></center><br>
 
