--- a/views/ficha.html
+++ b/views/ficha.html
@@ -15,7 +15,7 @@ Para tener una variedad dentro del fake controlamos si existen muchos integrante
 <br><b>— Selección de atributos</b>: Una vez acabada la ficha y sea revisada por el staff, tendrán que elegir una serie de atributos de una lista que les pasaremos por mensajería privada.
 <br><br><b>— Integración</b>: Los nuevos alumnos/profesores que ingresen a la academia de Narysium formarán parte de los Ignotos el primer mes, pudiéndose alargar si hay un desbalance en los clanes, en cuyo caso irán entrando en los clanes por orden de prioridad.
 <br><br><b>— Pasividad</b>: Aquellos miembros que no aparezcan por los alrededores de la academia y no participen en ninguna clase en mucho tiempo serán desvinculados de un clan para pasar a ser Ignoto.
-<br><br><b>— Ignotos</b>: No tienen sala común, sus dormitorios están dispuestos en la planta subsuelo S1, repartidos en un largo pasillo.
+<br><br><b>— Ignotos</b>: No tienen sala común, sus dormitorios están dispuestos en la planta subsuelo S1, repartidos en un largo pasillo. A excepción de los profesores, que como el resto siempre tendrán si sección en la recidencia de profesores.
 
 <br><p><i>No necesitan poner el amparo en la ficha. De hecho, más bien se les recomienda ponerlo en alguna parte del perfil que pueda ser editado de forma cómoda para cuando éste varíe, que no será frecuente pues el vínculo del amparo <i>normalmente</i> se va a mantener el mismo aunque se esté sin clan, pero será mejor para ustedes.</i></p>
 
@@ -30,6 +30,7 @@ Esto será una guía resumida de lo que deberá reflejar tu ficha como mínimo p
 <br><b>— Rango</b>: Tu rango de maestría dentro de la academia. Si eres profesor especificar materia que imparte <br>
 <br><b>— Troncal</b>: Elegir entre asginatura de <a href="/materias">simpatismo</a> o <a href="/materias">hechicería</a>.
 <br><b>— Materias favoritas (Sólo si eres alumno)</b>: Escoger 4. Son las asignaturas cuyas clases tu personaje no se perdería por nada del mundo.
+<br><b>— MBTI type</b> (opcional): Como no todo el mundo está enterado de las definiciones de personalidades de Myers-Briggs este dato será opcional, pero la verdad que nos ayudaría mucho si lo indicaran.
 
 <br><br><b>— Virtudes</b>: Aquello en lo que brillan, tanto en personalidad como en habilidades. 
 <br><b>— Defectos</b>: No abusar de defectos en la personalidad, incluir debilidades o campos que no manejen del todo bien 
