--- a/views/ficha.html
+++ b/views/ficha.html
@@ -29,7 +29,7 @@ Esto será una guía resumida de lo que deberá reflejar tu ficha como mínimo p
 <br><b>— Origen</b>: De otro mundo o de alguna región de Narysium. 
 <br><b>— Rango</b>: Tu rango de maestría dentro de la academia. Si eres profesor especificar materia que imparte <br>
 <br><b>— Troncal</b>: Elegir entre asginatura de <a href="/materias">simpatismo</a> o <a href="/materias">hechicería</a>.
-<br><b>— Materias favoritas (Sólo si eres alumno)</b>: Escoger 4. Son las asignaturas cuyas clases tu personaje no se perdería por nada del mundo.
+<br><b>— Materias favoritas (Sólo si eres alumno)</b>: Escoger 4. Son las asignaturas cuyas clases tu personaje no se perdería por nada del mundo. Esto influirá en tus resultados de tiradas en las mismas, según el profesor, y la manera de ganar puntos en ellas.
 <br><b>— MBTI type</b> (opcional): Como no todo el mundo está enterado de las definiciones de personalidades de Myers-Briggs este dato será opcional, pero la verdad que nos ayudaría mucho si lo indicaran.
 
 <br><br><b>— Virtudes</b>: Aquello en lo que brillan, tanto en personalidad como en habilidades. 
