--- a/views/index.html
+++ b/views/index.html
@@ -31,6 +31,7 @@
             <a style="width: 45%" href="/guides"><div class="button">Guías</div></a>
             <a style="width: 54%" href="/materias"><div class="button">Materias</div></a>
             <a style="width: 99%" href="/ficha"><div class="button">Hacer la ficha</div></a>
+            <a style="width: 99%" href="https://docs.google.com/spreadsheets/d/1EU91wNvB19v0yMHdPinYvmK-5oMb9M3_QKVRaEOR1QA/edit?usp=sharing"><div class="button">Puntos de clanes</div></a>
         </div>
 
     </center>
