--- a/views/normas.html
+++ b/views/normas.html
@@ -178,7 +178,7 @@
             <div class="text-norma convivencia-def">Os parecerá una chorrada, pero muchas veces se le resta importancia, y es que, aunque tu PJ sea un malandrín, un silencioso o tímido que evita la cercanía. Por favor: <b>No ignores a nadie, acoge a los nuevos y promueve el rol por TL aunque nadie se moje</b>.</div>
         </div>
     </div>
-</div><br>
+</div><br><!---->
 <br>
 
 <!-- Norma 10 -->
